add input fields and button and paragraph for a BMI and create a js file and connect input fields

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>BMI claculator</title>
 </head>
 <body>
-    <h1>Hello word</h1>
+   <h1>BMI Calculator</h1>
+   Enter Height: <input type="text" id="height">
+   Enter Height: <input type="text" id="weight">
+   <button id="calculate">Calculate</button>
+   <p id="bmi"></p>
+
+    <script src="./script/script.js"></script>
 </body>
 </html>
