in javascript add if conditon and adds a css adds a colors transtions

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI claculator</title>
+   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
    <h1>BMI Calculator</h1>
-   Enter Height: <input type="text" id="height">
-   Enter Height: <input type="text" id="weight">
+  <div>
+      Enter Weight: <input type="text" id="weight">
+    </div>
+    <div>
+        Enter Height: <input type="text" id="height">
+    </div>
    <button id="calculate">Calculate</button>
-   <p id="bmi"></p>
+
+   <p id="message"></p>
 
     <script src="./script/script.js"></script>
 </body>
